fixing spacing and trying to figure out carousel autoplay

--- a/src/components/all_teams/all_teams.scss
+++ b/src/components/all_teams/all_teams.scss
@@ -46,7 +46,7 @@
 @media screen and (min-width: 450px) {
   .all-teams {
     max-width: 1020px;
-    height: 60vw;
+    height: 80vh;
     max-height: 600px;
     display: flex;
     flex-direction: column;
